# orc-konter-agent-to-1c

./: .gitignore  README.md  architecture.md  docker-compose.prod.yml  docker-compose.yml  main.py  pipline.md  pyproject.toml  requirements.txt  test_attach_file_to_agreement.py  test_extract_services.py  test_full_processing.py  test_llm.py  test_llm_copy.py  test_no_duplicate_services.py
backend/: Dockerfile
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  orchestrator.py  state_manager.py
backend/app/core/: dependencies.py  security.py  settings.py
backend/app/models/: contract_schemas.py  database.py  enums.py  schemas.py
backend/app/services/: document_processor.py  document_validator.py  llm_service.py  oneс_service.py  progress_service.py  prompts.py  storage_service.py  validation_service.py
backend/app/tasks/: celery_app.py  processing_tasks.py
backend/app/testing/: __init__.py  test_cases.py  test_runner.py
backend/migrations/: env.py
backend/scripts/: __init__.py  backup_db.py  init_db.py  seed_db.py
backend/tests/: conftest.py  test_e2e.py  test_integration.py
filebeat/: filebeat.yml
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.jsx
grafana/dashboards/: sgr-agent-dashboard.json
mcp_service/: Dockerfile  requirements.txt  server.py
mcp_service/client/: __init__.py  oneс_client.py
mcp_service/server/: __init__.py  mcp_server.py  pyproject.toml  test.py
nginx/: nginx.conf
prometheus/: prometheus.yml
(+46 files in other folders)
