[project]
name = "orc-konter-agent-to-1c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "docling>=2.7.0",
    "dotenv>=0.9.9",
    "openai>=2.16.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.11",
    "python-docx==1.1.2",
    "python-json-logger==2.0.7",
    "sqlalchemy>=2.0.46",
    "structlog==23.2.0",
]
